// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProofsController GET /v2/proofs returns 200 and the merkle proof for a user on the bouncer list 1`] = `
Array [
  "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
  "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
  "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
]
`;

exports[`ProofsController GET /v2/proofs returns 404 for a chain with no bouncer file 1`] = `
Object {
  "message": "ethereum does not have a bouncer list",
}
`;

exports[`ProofsController GET /v2/proofs returns 404 for users not on the bouncer list 1`] = `
Object {
  "message": "0x3472A5A71965499acd81997a54BBA8D852C6E53d is not on the bouncer list",
}
`;
